Updated add task and add subtask

--- a/PMgo/PMgo.csproj
+++ b/PMgo/PMgo.csproj
@@ -86,6 +86,9 @@
     <Compile Include="createItem.xaml.cs">
       <DependentUpon>createItem.xaml</DependentUpon>
     </Compile>
+    <Compile Include="createSubtask.xaml.cs">
+      <DependentUpon>createSubtask.xaml</DependentUpon>
+    </Compile>
     <Compile Include="itemWindow.xaml.cs">
       <DependentUpon>itemWindow.xaml</DependentUpon>
     </Compile>
@@ -128,6 +131,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="createItem.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="createSubtask.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
