Added an Add Document Button to the itemWindow that opens an OpenFileDialog which then opens a new window with a DocumentViewer that doesn't work yet. However, we can use it for demonstration purposes if necessary. Also, a few minor edits.

--- a/PMgo/PMgo.csproj
+++ b/PMgo/PMgo.csproj
@@ -113,6 +113,9 @@
     <Compile Include="Tasks.xaml.cs">
       <DependentUpon>Tasks.xaml</DependentUpon>
     </Compile>
+    <Compile Include="addDocument.xaml.cs">
+      <DependentUpon>addDocument.xaml</DependentUpon>
+    </Compile>
     <Page Include="addMenu.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -170,6 +173,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Tasks.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="addDocument.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
