--- a/PMgo/PMgo.csproj
+++ b/PMgo/PMgo.csproj
@@ -101,6 +101,9 @@
     <Compile Include="forgetPassword.xaml.cs">
       <DependentUpon>forgetPassword.xaml</DependentUpon>
     </Compile>
+    <Compile Include="IMWindow.xaml.cs">
+      <DependentUpon>IMWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="itemWindow.xaml.cs">
       <DependentUpon>itemWindow.xaml</DependentUpon>
     </Compile>
@@ -166,6 +169,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="forgetPassword.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="IMWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
